Prevent FF title text overflow

--- a/halfdayspicker.css
+++ b/halfdayspicker.css
@@ -1,7 +1,7 @@
 
 .halfdayspicker {
 	padding: 5px;
-  width: 700px;
+  width: 710px;
   -moz-user-select: none;
   -khtml-user-select: none;
   user-select: none;
@@ -33,10 +33,10 @@
 }
 .halfdayspicker h3 {
 	margin: 0;
-  padding-left: 10px;
+  padding-left: 5px;
   line-height: 40px;
 	display: inline-block;
-	width: 120px;
+	width: 130px;
 	vertical-align: top;
 }
 .halfdayspicker .days {
